...
  @override
  State<StatefulWidget> createState() => _SignupScreenState();
}

class _SignupScreenState extends State<SignupScreen> {
  final List<String> _preferences = [
    "Books",
    "Clothes",
    "Electronics",
    "Experiences",
    "Food/Gourmet Items",
    "Gift Cards",
    "Home Decor",
    "Jewelry",
    "Personal Care Products",
    "Subscriptions",
    "Toys/Games"
...
      builder: (context) => AlertDialog(
        title: Text(title),
        content: Text(message),
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context),
            child: const Text("OK"),
          ),
        ],
      ),
    );
  }

...
                              color: MyColors.orange,
                            ),
                          ),
                          const SizedBox(height: 20),
                          _buildTextField(
                            controller: _nameController,
                            label: "Name",
                            icon: Icons.person,
                          ),
                          const SizedBox(height: 20),
                          GestureDetector(
                            onTap: () {
                              showModalBottomSheet(
...
                                      mainAxisSpacing: 10,
                                    ),
                                    itemCount: _profileImages.length,
                                    itemBuilder: (context, index) {
                                      final imagePath = _profileImages[index];
                                      return GestureDetector(
                                        key: const Key("Image"),
                                        onTap: () {
                                          setState(() {
                                            _selectedProfileImage = imagePath;
                                          });
                                          Navigator.pop(context);
                                        },
...
                                color: Colors.grey[200],
                                borderRadius: BorderRadius.circular(10),
                              ),
                              child: Center(
                                child: Text(
                                  _selectedProfileImage == null
                                      ? "Select Profile Image"
                                      : "Image Selected",
                                  style: const TextStyle(fontSize: 16, color: Colors.grey),
                                ),
                              ),
                            ),
                          ),
                          const SizedBox(height: 20),
                          _buildTextField(
                            controller: _emailController,
                            label: "Email",
                            icon: Icons.email,
                          ),
                          const SizedBox(height: 20),
                          _buildTextField(
                            controller: _phoneController,
                            label: "Phone Number",
                            icon: Icons.phone,
                          ),
                          const SizedBox(height: 20),
                          _buildTextField(
                            controller: _passwordController,
                            label: "Password",
                            icon: Icons.lock,
                            obscureText: !_isPasswordVisible,
                            onVisibilityToggle: () {
                              setState(() {
                                _isPasswordVisible = !_isPasswordVisible;
                              });
...
                              ),
                            ),
                          ),
                          const SizedBox(height: 20),
                          _buildTextField(
                            controller: _confirmPasswordController,
                            label: "Confirm Password",
                            icon: Icons.lock,
                            obscureText: !_isConfirmPasswordVisible,
                            onVisibilityToggle: () {
                              setState(() {
                                _isConfirmPasswordVisible = !_isConfirmPasswordVisible;
                              });
...
                          const Text(
                            "Select Your Preferences",
                            style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold),
                          ),
                          const SizedBox(height: 10),
                          DropdownButtonFormField<String>(
                            key: const Key("Preferences"),
                            decoration: InputDecoration(
                              filled: true,
                              fillColor: Colors.grey[200],
                              border: OutlineInputBorder(
                                borderRadius: BorderRadius.circular(30),
                                borderSide: BorderSide.none,
...
                                style: ElevatedButton.styleFrom(
                                  padding: const EdgeInsets.symmetric(horizontal: 50, vertical: 14),
                                  backgroundColor: Colors.transparent,
                                  shadowColor: Colors.transparent,
                                ),
                                child: const Text(
                                  "Signup",
                                  style: TextStyle(
                                    color: Colors.white,
                                    fontWeight: FontWeight.bold,
                                    fontSize: 15,
                                    fontFamily: "poppins",
                                  ),
...
