...
                    ),
                  ),
                ),
                Column(
                  children: [
                    Switch(
                      key: const Key("Pledge Button"),
                      value: gift.status == "Pledged",
                      onChanged: isPastDue
                          ? null
                          : (value) => togglePledge(gift),
                      activeColor: Colors.green,
                    ),
...
