...
                  ),
                ],
              ),
            ),
          ),
          GestureDetector(
            key: const Key("Signup Button"),
            onTap: () {
              Navigator.pushNamed(context, '/signup');
            },
            child: Container(
              color: Colors.white,
              padding: const EdgeInsets.only(bottom: 20.0),
...
